--- a/quality_control.ipynb
+++ b/quality_control.ipynb
@@ -20,8 +20,10 @@
     "The quality team takes a **random sample of 25 rods** to estimate the population mean. \n",
     "The sample mean length is found to be **50.1 cm.**\n",
     "\n",
-    "What is the standard error of the sample mean?\n",
-    "What is the 95% confidence interval for the true mean rod length?"
+    "- What is the standard error of the sample mean?\n",
+    "- What is the 95% confidence interval for the true mean rod length?\n",
+    "\n",
+    "How to estimate the **true average rod length** using a **sample of 25 rods**, when the population standard deviation is **unknown**?"
    ]
   },
   {
@@ -34,7 +36,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "from scipy.stats import norm"
+    "from scipy.stats import norm\n",
+    "from scipy.stats import t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b46aa23",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Scenario 1: Known Population Paramenters"
    ]
   },
   {
@@ -61,7 +74,7 @@
    "id": "b18b2ad4",
    "metadata": {},
    "source": [
-    "### - **Question 1 and 2**"
+    "### - **Z score, P(X ≤  51.5 cm)**"
    ]
   },
   {
@@ -161,7 +174,7 @@
    "id": "59b977d0",
    "metadata": {},
    "source": [
-    "### - **Question 3**"
+    "### - **P(49 ≤ X ≤ 51)**"
    ]
   },
   {
@@ -232,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "91223ffa",
    "metadata": {},
    "outputs": [
@@ -268,12 +281,10 @@
     "plt.axvline(x_upper, linestyle='--', color='blue', label='51cm')\n",
     "plt.axvline(x_lower, linestyle='--', color='blue', label='49cm')\n",
     "\n",
-    "# Labels\n",
+    "# Labels \n",
     "plt.title(\"Normal Distribution of Rod Lengths\")\n",
     "plt.xlabel(\"Rod Length (cm)\")\n",
     "plt.ylabel(\"Probability Density\")\n",
-    "\n",
-    "# Labels andl Legend\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "\n",
@@ -288,7 +299,7 @@
    "id": "aa39c00b",
    "metadata": {},
    "source": [
-    "### - **Question 4**"
+    "### - **95% CI (n = 25, x̄ = 50.1)**"
    ]
   },
   {
@@ -419,9 +430,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ec0b15e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Scenario 2: Unknown σ, Using Sample Data (n=25)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec0b15e",
+   "id": "42c44293",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -569,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b7674ada",
    "metadata": {},
    "outputs": [
@@ -585,10 +606,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import t\n",
-    "import math\n",
-    "\n",
     "# Sample statistics\n",
     "x_bar = 50.1         # sample mean\n",
     "s = 0.52             # sample standard deviation\n",
@@ -654,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
